--- a/analysis/simulation_4tissues_correlated.Rmd
+++ b/analysis/simulation_4tissues_correlated.Rmd
@@ -21,15 +21,13 @@ source("/project2/xinhe/shengqian/cTWAS/cTWAS_analysis/analysis/simulation_help_
 results_dir <- "/project2/xinhe/shengqian/cTWAS/cTWAS_simulation/simulation_uncorrelated_four_tissues_95/"
 runtag = "ukb-s80.45-3_corr"
 configtag <- 1
-
 simutags <- paste(1, 1:3, sep = "-")
 thin <- 0.1
-
 sample_size <- 45000
 PIP_threshold <- 0.8
 ```
 
-```{r}
+```{r echo=FALSE}
 results_df <- data.frame(simutag=as.character(),
                               n_causal=as.integer(),
                               n_causal_combined=as.integer(),
@@ -112,14 +110,7 @@ for (i in 1:length(simutags)){
   estimated_group_pve_all <- estimated_group_prior_var_all*estimated_group_prior_all*group_size/sample_size #check PVE calculation
   
   #multitissue TWAS analysis with bonferroni adjusted threshold for z scores
-  #load(paste0(results_dir, runtag, "_simu", simutag, "_LDR_z_gene.Rd"))
-  ld_exprfs <- paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR_chr", 1:22, ".exprqc.Rd")
-  z_gene <- list()
-  for (j in 1:length(ld_exprfs)){
-    load(ld_exprfs[j])
-    z_gene[[j]] <- z_gene_chr
-  }
-  z_gene <- do.call(rbind, z_gene)
+  load(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag,"_LDR_z_gene.Rd"))
   alpha <- 0.05
   sig_thresh <- qnorm(1-(alpha/nrow(z_gene)/2), lower=T)
   twas_genes <- z_gene$id[abs(z_gene$z)>sig_thresh]
@@ -160,7 +151,9 @@ for (i in 1:length(simutags)){
   
   results_df <- rbind(results_df, results_current)
 }
+```
 
+```{r}
 #results using PIP threshold (gene+tissue)
 results_df[,c("simutag", "n_causal", "n_detected_pip", "n_detected_pip_in_causal")]
 
@@ -192,6 +185,126 @@ colMeans(results_df[,grep("pve", names(results_df))])
 results_df[,c(which(colnames(results_df)=="simutag"), grep("twas", names(results_df)))]
 
 sum(results_df$n_detected_comb_twas_in_causal)/sum(results_df$n_detected_comb_twas)
+```
+
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1
+y2 <- results_df$prior_weight2
+y3 <- results_df$prior_weight3
+y4 <- results_df$prior_weight4
+
+truth <- rbind(c(1,0.015),c(2,0.003),c(3,0.003),c(4,0.003))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","95-1","95-2","95-3"),ylim=c(0,0.025),ylab="Prior inclusion")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1/results_df$prior_snp
+y2 <- results_df$prior_weight2/results_df$prior_snp
+y3 <- results_df$prior_weight3/results_df$prior_snp
+y4 <- results_df$prior_weight4/results_df$prior_snp
+
+truth <- rbind(c(1,60),c(2,12),c(3,12),c(4,12))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","95-1","95-2","95-3"),ylim=c(0,100),ylab="Enrichment")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$pve_weight1
+y2 <- results_df$pve_weight2
+y3 <- results_df$pve_weight3
+y4 <- results_df$pve_weight4
+
+truth <- rbind(c(1,0.05),c(2,0.01),c(3,0.01),c(4,0.01))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","95-1","95-2","95-3"),ylim=c(0,0.07),ylab="PVE")
+```
+
+```{r echo=FALSE}
+Liver_attr <- c()
+mix1_attr <- c()
+mix2_attr <- c()
+mix3_attr <- c()
+for (i in 1:length(simutags)){
+  simutag <- simutags[i]
+    
+  #load cTWAS results
+  ctwas_res <- data.table::fread(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR.susieIrss.txt"))
+  ctwas_gene_res <- ctwas_res[ctwas_res$type!="SNP",]
+    
+  #collapse gene+tissues to genes and compute combined PIP
+  ctwas_gene_res$gene <- sapply(ctwas_gene_res$id, function(x){unlist(strsplit(x,"[|]"))[1]})
+    
+  df_Liver <- ctwas_gene_res[ctwas_gene_res$type=="Liver",]
+  df_mix1 <- ctwas_gene_res[ctwas_gene_res$type=="weight_95_1",]
+  df_mix2 <- ctwas_gene_res[ctwas_gene_res$type=="weight_95_2",]
+  df_mix3 <- ctwas_gene_res[ctwas_gene_res$type=="weight_95_3",]
+  
+  df_gene <- aggregate(ctwas_gene_res$susie_pip, by=list(ctwas_gene_res$gene), FUN=sum)
+  colnames(df_gene) <- c("gene", "combined_pip")
+  df_gene$Liver_pip <-0
+  df_gene$mix1_pip <-0
+  df_gene$mix2_pip <-0
+  df_gene$mix3_pip <-0
+    
+  for(i in df_gene$gene){
+    if(i %in% df_Liver$gene){
+      df_gene[df_gene$gene==i,"Liver_pip"] <- round(df_Liver[df_Liver$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix1$gene){
+      df_gene[df_gene$gene==i,"mix1_pip"] <- round(df_mix1[df_mix1$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix2$gene){
+      df_gene[df_gene$gene==i,"mix2_pip"] <- round(df_mix2[df_mix2$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  for(i in df_gene$gene){
+    if(i %in% df_mix3$gene){
+      df_gene[df_gene$gene==i,"mix3_pip"] <- round(df_mix3[df_mix3$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  df_gene$combined_pip <- round(df_gene$combined_pip,3)
+  #sort by combined PIP
+  df_gene <- df_gene[order(-df_gene$combined_pip),]
+  #genes with PIP>0.8 or 20 highest PIPs
+  df_gene <- df_gene[df_gene$combined_pip>0.8,]
+    
+  Liver_attr <- c(Liver_attr,df_gene$Liver_pip/df_gene$combined_pip)
+  mix1_attr <- c(mix1_attr,df_gene$mix1_pip/df_gene$combined_pip)
+  mix2_attr <- c(mix2_attr,df_gene$mix2_pip/df_gene$combined_pip)
+  mix3_attr <- c(mix3_attr,df_gene$mix3_pip/df_gene$combined_pip)
+}
+
+pip_df <- list(Liver_attr,mix1_attr,mix2_attr,mix3_attr)
+```
+
+```{r echo=FALSE}
+data <- data.frame(
+  tissue=c(rep("Liver",length(pip_df[[1]])), rep("mix1",length(pip_df[[2]])), rep("mix2",length(pip_df[[3]])), rep("mix3",length(pip_df[[4]]))),
+  attribution=c(pip_df[[1]],pip_df[[2]],pip_df[[3]],pip_df[[4]])
+)
+
+data$tissue <- factor(data$tissue, levels=unique(data$tissue))
+
+#pdf(file = "./primary_set2.pdf", width = 5, height = 5)
+ggbarplot(data, 
+          x = "tissue", 
+          y = "attribution", 
+          add = "mean_se", 
+          fill = "tissue", 
+          legend = "none", 
+          ylab="Proportion", 
+          xlab="",
+          palette = c("#7fc97f", "#beaed4", "#fdc086", "#92c5de")) + grids(linetype = "dashed") + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
+#dev.off()
 ```
 
 ### Separate effect size parameters
@@ -202,15 +315,13 @@ For the cTWAS analysis, each tissue had its own prior inclusion parameter end ef
 results_dir <- "/project2/xinhe/shengqian/cTWAS/cTWAS_simulation/simulation_uncorrelated_four_tissues_95/"
 runtag = "ukb-s80.45-3_corr"
 configtag <- 2
-
 simutags <- paste(1, 1:3, sep = "-")
 thin <- 0.1
-
 sample_size <- 45000
 PIP_threshold <- 0.8
 ```
 
-```{r}
+```{r echo=FALSE}
 results_df <- data.frame(simutag=as.character(),
                               n_causal=as.integer(),
                               n_causal_combined=as.integer(),
@@ -293,14 +404,7 @@ for (i in 1:length(simutags)){
   estimated_group_pve_all <- estimated_group_prior_var_all*estimated_group_prior_all*group_size/sample_size #check PVE calculation
   
   #multitissue TWAS analysis with bonferroni adjusted threshold for z scores
-  #load(paste0(results_dir, runtag, "_simu", simutag, "_LDR_z_gene.Rd"))
-  ld_exprfs <- paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR_chr", 1:22, ".exprqc.Rd")
-  z_gene <- list()
-  for (j in 1:length(ld_exprfs)){
-    load(ld_exprfs[j])
-    z_gene[[j]] <- z_gene_chr
-  }
-  z_gene <- do.call(rbind, z_gene)
+  load(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag,"_LDR_z_gene.Rd"))
   alpha <- 0.05
   sig_thresh <- qnorm(1-(alpha/nrow(z_gene)/2), lower=T)
   twas_genes <- z_gene$id[abs(z_gene$z)>sig_thresh]
@@ -341,7 +445,9 @@ for (i in 1:length(simutags)){
   
   results_df <- rbind(results_df, results_current)
 }
+```
 
+```{r}
 #results using PIP threshold (gene+tissue)
 results_df[,c("simutag", "n_causal", "n_detected_pip", "n_detected_pip_in_causal")]
 
@@ -375,6 +481,125 @@ results_df[,c(which(colnames(results_df)=="simutag"), grep("twas", names(results
 sum(results_df$n_detected_comb_twas_in_causal)/sum(results_df$n_detected_comb_twas)
 ```
 
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1
+y2 <- results_df$prior_weight2
+y3 <- results_df$prior_weight3
+y4 <- results_df$prior_weight4
+
+truth <- rbind(c(1,0.015),c(2,0.003),c(3,0.003),c(4,0.003))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","95-1","95-2","95-3"),ylim=c(0,0.025),ylab="Prior inclusion")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1/results_df$prior_snp
+y2 <- results_df$prior_weight2/results_df$prior_snp
+y3 <- results_df$prior_weight3/results_df$prior_snp
+y4 <- results_df$prior_weight4/results_df$prior_snp
+
+truth <- rbind(c(1,60),c(2,12),c(3,12),c(4,12))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","95-1","95-2","95-3"),ylim=c(0,100),ylab="Enrichment")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$pve_weight1
+y2 <- results_df$pve_weight2
+y3 <- results_df$pve_weight3
+y4 <- results_df$pve_weight4
+
+truth <- rbind(c(1,0.05),c(2,0.01),c(3,0.01),c(4,0.01))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","95-1","95-2","95-3"),ylim=c(0,0.1),ylab="PVE")
+```
+
+```{r echo=FALSE}
+Liver_attr <- c()
+mix1_attr <- c()
+mix2_attr <- c()
+mix3_attr <- c()
+for (i in 1:length(simutags)){
+  simutag <- simutags[i]
+    
+  #load cTWAS results
+  ctwas_res <- data.table::fread(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR.susieIrss.txt"))
+  ctwas_gene_res <- ctwas_res[ctwas_res$type!="SNP",]
+    
+  #collapse gene+tissues to genes and compute combined PIP
+  ctwas_gene_res$gene <- sapply(ctwas_gene_res$id, function(x){unlist(strsplit(x,"[|]"))[1]})
+    
+  df_Liver <- ctwas_gene_res[ctwas_gene_res$type=="Liver",]
+  df_mix1 <- ctwas_gene_res[ctwas_gene_res$type=="weight_95_1",]
+  df_mix2 <- ctwas_gene_res[ctwas_gene_res$type=="weight_95_2",]
+  df_mix3 <- ctwas_gene_res[ctwas_gene_res$type=="weight_95_3",]
+  
+  df_gene <- aggregate(ctwas_gene_res$susie_pip, by=list(ctwas_gene_res$gene), FUN=sum)
+  colnames(df_gene) <- c("gene", "combined_pip")
+  df_gene$Liver_pip <-0
+  df_gene$mix1_pip <-0
+  df_gene$mix2_pip <-0
+  df_gene$mix3_pip <-0
+    
+  for(i in df_gene$gene){
+    if(i %in% df_Liver$gene){
+      df_gene[df_gene$gene==i,"Liver_pip"] <- round(df_Liver[df_Liver$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix1$gene){
+      df_gene[df_gene$gene==i,"mix1_pip"] <- round(df_mix1[df_mix1$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix2$gene){
+      df_gene[df_gene$gene==i,"mix2_pip"] <- round(df_mix2[df_mix2$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  for(i in df_gene$gene){
+    if(i %in% df_mix3$gene){
+      df_gene[df_gene$gene==i,"mix3_pip"] <- round(df_mix3[df_mix3$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  df_gene$combined_pip <- round(df_gene$combined_pip,3)
+  #sort by combined PIP
+  df_gene <- df_gene[order(-df_gene$combined_pip),]
+  #genes with PIP>0.8 or 20 highest PIPs
+  df_gene <- df_gene[df_gene$combined_pip>0.8,]
+    
+  Liver_attr <- c(Liver_attr,df_gene$Liver_pip/df_gene$combined_pip)
+  mix1_attr <- c(mix1_attr,df_gene$mix1_pip/df_gene$combined_pip)
+  mix2_attr <- c(mix2_attr,df_gene$mix2_pip/df_gene$combined_pip)
+  mix3_attr <- c(mix3_attr,df_gene$mix3_pip/df_gene$combined_pip)
+}
+
+pip_df <- list(Liver_attr,mix1_attr,mix2_attr,mix3_attr)
+```
+
+```{r echo=FALSE}
+data <- data.frame(
+  tissue=c(rep("Liver",length(pip_df[[1]])), rep("mix1",length(pip_df[[2]])), rep("mix2",length(pip_df[[3]])), rep("mix3",length(pip_df[[4]]))),
+  attribution=c(pip_df[[1]],pip_df[[2]],pip_df[[3]],pip_df[[4]])
+)
+
+data$tissue <- factor(data$tissue, levels=unique(data$tissue))
+
+#pdf(file = "./primary_set2.pdf", width = 5, height = 5)
+ggbarplot(data, 
+          x = "tissue", 
+          y = "attribution", 
+          add = "mean_se", 
+          fill = "tissue", 
+          legend = "none", 
+          ylab="Proportion", 
+          xlab="",
+          palette = c("#7fc97f", "#beaed4", "#fdc086", "#92c5de")) + grids(linetype = "dashed") + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
+#dev.off()
+```
 ## Simulation 2: Liver and 50% correlated tissues 
 
 ### Shared effect size parameters
@@ -385,15 +610,13 @@ sum(results_df$n_detected_comb_twas_in_causal)/sum(results_df$n_detected_comb_tw
 results_dir <- "/project2/xinhe/shengqian/cTWAS/cTWAS_simulation/simulation_uncorrelated_four_tissues_50/"
 runtag = "ukb-s80.45-3_corr"
 configtag <- 1
-
 simutags <- paste(1, 1:3, sep = "-")
 thin <- 0.1
-
 sample_size <- 45000
 PIP_threshold <- 0.8
 ```
 
-```{r}
+```{r echo=FALSE}
 results_df <- data.frame(simutag=as.character(),
                               n_causal=as.integer(),
                               n_causal_combined=as.integer(),
@@ -476,14 +699,7 @@ for (i in 1:length(simutags)){
   estimated_group_pve_all <- estimated_group_prior_var_all*estimated_group_prior_all*group_size/sample_size #check PVE calculation
   
   #multitissue TWAS analysis with bonferroni adjusted threshold for z scores
-  #load(paste0(results_dir, runtag, "_simu", simutag, "_LDR_z_gene.Rd"))
-  ld_exprfs <- paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR_chr", 1:22, ".exprqc.Rd")
-  z_gene <- list()
-  for (j in 1:length(ld_exprfs)){
-    load(ld_exprfs[j])
-    z_gene[[j]] <- z_gene_chr
-  }
-  z_gene <- do.call(rbind, z_gene)
+  load(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag,"_LDR_z_gene.Rd"))
   alpha <- 0.05
   sig_thresh <- qnorm(1-(alpha/nrow(z_gene)/2), lower=T)
   twas_genes <- z_gene$id[abs(z_gene$z)>sig_thresh]
@@ -524,7 +740,9 @@ for (i in 1:length(simutags)){
   
   results_df <- rbind(results_df, results_current)
 }
+```
 
+```{r}
 #results using PIP threshold (gene+tissue)
 results_df[,c("simutag", "n_causal", "n_detected_pip", "n_detected_pip_in_causal")]
 
@@ -556,6 +774,126 @@ colMeans(results_df[,grep("pve", names(results_df))])
 results_df[,c(which(colnames(results_df)=="simutag"), grep("twas", names(results_df)))]
 
 sum(results_df$n_detected_comb_twas_in_causal)/sum(results_df$n_detected_comb_twas)
+```
+
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1
+y2 <- results_df$prior_weight2
+y3 <- results_df$prior_weight3
+y4 <- results_df$prior_weight4
+
+truth <- rbind(c(1,0.015),c(2,0.003),c(3,0.003),c(4,0.003))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","50-1","50-2","50-3"),ylim=c(0,0.025),ylab="Prior inclusion")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1/results_df$prior_snp
+y2 <- results_df$prior_weight2/results_df$prior_snp
+y3 <- results_df$prior_weight3/results_df$prior_snp
+y4 <- results_df$prior_weight4/results_df$prior_snp
+
+truth <- rbind(c(1,60),c(2,12),c(3,12),c(4,12))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","50-1","50-2","50-3"),ylim=c(0,100),ylab="Enrichment")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$pve_weight1
+y2 <- results_df$pve_weight2
+y3 <- results_df$pve_weight3
+y4 <- results_df$pve_weight4
+
+truth <- rbind(c(1,0.05),c(2,0.01),c(3,0.01),c(4,0.01))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","50-1","50-2","50-3"),ylim=c(0,0.1),ylab="PVE")
+```
+
+```{r echo=FALSE}
+Liver_attr <- c()
+mix1_attr <- c()
+mix2_attr <- c()
+mix3_attr <- c()
+for (i in 1:length(simutags)){
+  simutag <- simutags[i]
+    
+  #load cTWAS results
+  ctwas_res <- data.table::fread(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR.susieIrss.txt"))
+  ctwas_gene_res <- ctwas_res[ctwas_res$type!="SNP",]
+    
+  #collapse gene+tissues to genes and compute combined PIP
+  ctwas_gene_res$gene <- sapply(ctwas_gene_res$id, function(x){unlist(strsplit(x,"[|]"))[1]})
+    
+  df_Liver <- ctwas_gene_res[ctwas_gene_res$type=="Liver",]
+  df_mix1 <- ctwas_gene_res[ctwas_gene_res$type=="weight_50_1",]
+  df_mix2 <- ctwas_gene_res[ctwas_gene_res$type=="weight_50_2",]
+  df_mix3 <- ctwas_gene_res[ctwas_gene_res$type=="weight_50_3",]
+  
+  df_gene <- aggregate(ctwas_gene_res$susie_pip, by=list(ctwas_gene_res$gene), FUN=sum)
+  colnames(df_gene) <- c("gene", "combined_pip")
+  df_gene$Liver_pip <-0
+  df_gene$mix1_pip <-0
+  df_gene$mix2_pip <-0
+  df_gene$mix3_pip <-0
+    
+  for(i in df_gene$gene){
+    if(i %in% df_Liver$gene){
+      df_gene[df_gene$gene==i,"Liver_pip"] <- round(df_Liver[df_Liver$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix1$gene){
+      df_gene[df_gene$gene==i,"mix1_pip"] <- round(df_mix1[df_mix1$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix2$gene){
+      df_gene[df_gene$gene==i,"mix2_pip"] <- round(df_mix2[df_mix2$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  for(i in df_gene$gene){
+    if(i %in% df_mix3$gene){
+      df_gene[df_gene$gene==i,"mix3_pip"] <- round(df_mix3[df_mix3$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  df_gene$combined_pip <- round(df_gene$combined_pip,3)
+  #sort by combined PIP
+  df_gene <- df_gene[order(-df_gene$combined_pip),]
+  #genes with PIP>0.8 or 20 highest PIPs
+  df_gene <- df_gene[df_gene$combined_pip>0.8,]
+    
+  Liver_attr <- c(Liver_attr,df_gene$Liver_pip/df_gene$combined_pip)
+  mix1_attr <- c(mix1_attr,df_gene$mix1_pip/df_gene$combined_pip)
+  mix2_attr <- c(mix2_attr,df_gene$mix2_pip/df_gene$combined_pip)
+  mix3_attr <- c(mix3_attr,df_gene$mix3_pip/df_gene$combined_pip)
+}
+
+pip_df <- list(Liver_attr,mix1_attr,mix2_attr,mix3_attr)
+```
+
+```{r echo=FALSE}
+data <- data.frame(
+  tissue=c(rep("Liver",length(pip_df[[1]])), rep("mix1",length(pip_df[[2]])), rep("mix2",length(pip_df[[3]])), rep("mix3",length(pip_df[[4]]))),
+  attribution=c(pip_df[[1]],pip_df[[2]],pip_df[[3]],pip_df[[4]])
+)
+
+data$tissue <- factor(data$tissue, levels=unique(data$tissue))
+
+#pdf(file = "./primary_set2.pdf", width = 5, height = 5)
+ggbarplot(data, 
+          x = "tissue", 
+          y = "attribution", 
+          add = "mean_se", 
+          fill = "tissue", 
+          legend = "none", 
+          ylab="Proportion", 
+          xlab="",
+          palette = c("#7fc97f", "#beaed4", "#fdc086", "#92c5de")) + grids(linetype = "dashed") + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
+#dev.off()
 ```
 
 ### Separate effect size parameters
@@ -574,7 +912,7 @@ sample_size <- 45000
 PIP_threshold <- 0.8
 ```
 
-```{r}
+```{r echo=FALSE}
 results_df <- data.frame(simutag=as.character(),
                               n_causal=as.integer(),
                               n_causal_combined=as.integer(),
@@ -657,14 +995,7 @@ for (i in 1:length(simutags)){
   estimated_group_pve_all <- estimated_group_prior_var_all*estimated_group_prior_all*group_size/sample_size #check PVE calculation
   
   #multitissue TWAS analysis with bonferroni adjusted threshold for z scores
-  #load(paste0(results_dir, runtag, "_simu", simutag, "_LDR_z_gene.Rd"))
-  ld_exprfs <- paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR_chr", 1:22, ".exprqc.Rd")
-  z_gene <- list()
-  for (j in 1:length(ld_exprfs)){
-    load(ld_exprfs[j])
-    z_gene[[j]] <- z_gene_chr
-  }
-  z_gene <- do.call(rbind, z_gene)
+  load(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag,"_LDR_z_gene.Rd"))
   alpha <- 0.05
   sig_thresh <- qnorm(1-(alpha/nrow(z_gene)/2), lower=T)
   twas_genes <- z_gene$id[abs(z_gene$z)>sig_thresh]
@@ -705,7 +1036,9 @@ for (i in 1:length(simutags)){
   
   results_df <- rbind(results_df, results_current)
 }
+```
 
+```{r}
 #results using PIP threshold (gene+tissue)
 results_df[,c("simutag", "n_causal", "n_detected_pip", "n_detected_pip_in_causal")]
 
@@ -737,6 +1070,126 @@ colMeans(results_df[,grep("pve", names(results_df))])
 results_df[,c(which(colnames(results_df)=="simutag"), grep("twas", names(results_df)))]
 
 sum(results_df$n_detected_comb_twas_in_causal)/sum(results_df$n_detected_comb_twas)
+```
+
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1
+y2 <- results_df$prior_weight2
+y3 <- results_df$prior_weight3
+y4 <- results_df$prior_weight4
+
+truth <- rbind(c(1,0.015),c(2,0.003),c(3,0.003),c(4,0.003))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","50-1","50-2","50-3"),ylim=c(0,0.025),ylab="Prior inclusion")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1/results_df$prior_snp
+y2 <- results_df$prior_weight2/results_df$prior_snp
+y3 <- results_df$prior_weight3/results_df$prior_snp
+y4 <- results_df$prior_weight4/results_df$prior_snp
+
+truth <- rbind(c(1,60),c(2,12),c(3,12),c(4,12))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","50-1","50-2","50-3"),ylim=c(0,100),ylab="Enrichment")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$pve_weight1
+y2 <- results_df$pve_weight2
+y3 <- results_df$pve_weight3
+y4 <- results_df$pve_weight4
+
+truth <- rbind(c(1,0.05),c(2,0.01),c(3,0.01),c(4,0.01))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","50-1","50-2","50-3"),ylim=c(0,0.1),ylab="PVE")
+```
+
+```{r echo=FALSE}
+Liver_attr <- c()
+mix1_attr <- c()
+mix2_attr <- c()
+mix3_attr <- c()
+for (i in 1:length(simutags)){
+  simutag <- simutags[i]
+    
+  #load cTWAS results
+  ctwas_res <- data.table::fread(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR.susieIrss.txt"))
+  ctwas_gene_res <- ctwas_res[ctwas_res$type!="SNP",]
+    
+  #collapse gene+tissues to genes and compute combined PIP
+  ctwas_gene_res$gene <- sapply(ctwas_gene_res$id, function(x){unlist(strsplit(x,"[|]"))[1]})
+    
+  df_Liver <- ctwas_gene_res[ctwas_gene_res$type=="Liver",]
+  df_mix1 <- ctwas_gene_res[ctwas_gene_res$type=="weight_50_1",]
+  df_mix2 <- ctwas_gene_res[ctwas_gene_res$type=="weight_50_2",]
+  df_mix3 <- ctwas_gene_res[ctwas_gene_res$type=="weight_50_3",]
+  
+  df_gene <- aggregate(ctwas_gene_res$susie_pip, by=list(ctwas_gene_res$gene), FUN=sum)
+  colnames(df_gene) <- c("gene", "combined_pip")
+  df_gene$Liver_pip <-0
+  df_gene$mix1_pip <-0
+  df_gene$mix2_pip <-0
+  df_gene$mix3_pip <-0
+    
+  for(i in df_gene$gene){
+    if(i %in% df_Liver$gene){
+      df_gene[df_gene$gene==i,"Liver_pip"] <- round(df_Liver[df_Liver$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix1$gene){
+      df_gene[df_gene$gene==i,"mix1_pip"] <- round(df_mix1[df_mix1$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix2$gene){
+      df_gene[df_gene$gene==i,"mix2_pip"] <- round(df_mix2[df_mix2$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  for(i in df_gene$gene){
+    if(i %in% df_mix3$gene){
+      df_gene[df_gene$gene==i,"mix3_pip"] <- round(df_mix3[df_mix3$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  df_gene$combined_pip <- round(df_gene$combined_pip,3)
+  #sort by combined PIP
+  df_gene <- df_gene[order(-df_gene$combined_pip),]
+  #genes with PIP>0.8 or 20 highest PIPs
+  df_gene <- df_gene[df_gene$combined_pip>0.8,]
+    
+  Liver_attr <- c(Liver_attr,df_gene$Liver_pip/df_gene$combined_pip)
+  mix1_attr <- c(mix1_attr,df_gene$mix1_pip/df_gene$combined_pip)
+  mix2_attr <- c(mix2_attr,df_gene$mix2_pip/df_gene$combined_pip)
+  mix3_attr <- c(mix3_attr,df_gene$mix3_pip/df_gene$combined_pip)
+}
+
+pip_df <- list(Liver_attr,mix1_attr,mix2_attr,mix3_attr)
+```
+
+```{r echo=FALSE}
+data <- data.frame(
+  tissue=c(rep("Liver",length(pip_df[[1]])), rep("mix1",length(pip_df[[2]])), rep("mix2",length(pip_df[[3]])), rep("mix3",length(pip_df[[4]]))),
+  attribution=c(pip_df[[1]],pip_df[[2]],pip_df[[3]],pip_df[[4]])
+)
+
+data$tissue <- factor(data$tissue, levels=unique(data$tissue))
+
+#pdf(file = "./primary_set2.pdf", width = 5, height = 5)
+ggbarplot(data, 
+          x = "tissue", 
+          y = "attribution", 
+          add = "mean_se", 
+          fill = "tissue", 
+          legend = "none", 
+          ylab="Proportion", 
+          xlab="",
+          palette = c("#7fc97f", "#beaed4", "#fdc086", "#92c5de")) + grids(linetype = "dashed") + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
+#dev.off()
 ```
 
 ## Simulation 3: Liver and 5% correlated tissues 
@@ -757,7 +1210,7 @@ sample_size <- 45000
 PIP_threshold <- 0.8
 ```
 
-```{r}
+```{r echo=FALSE}
 results_df <- data.frame(simutag=as.character(),
                               n_causal=as.integer(),
                               n_causal_combined=as.integer(),
@@ -840,14 +1293,7 @@ for (i in 1:length(simutags)){
   estimated_group_pve_all <- estimated_group_prior_var_all*estimated_group_prior_all*group_size/sample_size #check PVE calculation
   
   #multitissue TWAS analysis with bonferroni adjusted threshold for z scores
-  #load(paste0(results_dir, runtag, "_simu", simutag, "_LDR_z_gene.Rd"))
-  ld_exprfs <- paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR_chr", 1:22, ".exprqc.Rd")
-  z_gene <- list()
-  for (j in 1:length(ld_exprfs)){
-    load(ld_exprfs[j])
-    z_gene[[j]] <- z_gene_chr
-  }
-  z_gene <- do.call(rbind, z_gene)
+  load(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag,"_LDR_z_gene.Rd"))
   alpha <- 0.05
   sig_thresh <- qnorm(1-(alpha/nrow(z_gene)/2), lower=T)
   twas_genes <- z_gene$id[abs(z_gene$z)>sig_thresh]
@@ -888,7 +1334,9 @@ for (i in 1:length(simutags)){
   
   results_df <- rbind(results_df, results_current)
 }
+```
 
+```{r}
 #results using PIP threshold (gene+tissue)
 results_df[,c("simutag", "n_causal", "n_detected_pip", "n_detected_pip_in_causal")]
 
@@ -920,6 +1368,126 @@ colMeans(results_df[,grep("pve", names(results_df))])
 results_df[,c(which(colnames(results_df)=="simutag"), grep("twas", names(results_df)))]
 
 sum(results_df$n_detected_comb_twas_in_causal)/sum(results_df$n_detected_comb_twas)
+```
+
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1
+y2 <- results_df$prior_weight2
+y3 <- results_df$prior_weight3
+y4 <- results_df$prior_weight4
+
+truth <- rbind(c(1,0.015),c(2,0.003),c(3,0.003),c(4,0.003))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","05-1","05-2","05-3"),ylim=c(0,0.025),ylab="Prior inclusion")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1/results_df$prior_snp
+y2 <- results_df$prior_weight2/results_df$prior_snp
+y3 <- results_df$prior_weight3/results_df$prior_snp
+y4 <- results_df$prior_weight4/results_df$prior_snp
+
+truth <- rbind(c(1,60),c(2,12),c(3,12),c(4,12))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","05-1","05-2","05-3"),ylim=c(0,100),ylab="Enrichment")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$pve_weight1
+y2 <- results_df$pve_weight2
+y3 <- results_df$pve_weight3
+y4 <- results_df$pve_weight4
+
+truth <- rbind(c(1,0.05),c(2,0.01),c(3,0.01),c(4,0.01))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","05-1","05-2","05-3"),ylim=c(0,0.1),ylab="PVE")
+```
+
+```{r echo=FALSE}
+Liver_attr <- c()
+mix1_attr <- c()
+mix2_attr <- c()
+mix3_attr <- c()
+for (i in 1:length(simutags)){
+  simutag <- simutags[i]
+    
+  #load cTWAS results
+  ctwas_res <- data.table::fread(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR.susieIrss.txt"))
+  ctwas_gene_res <- ctwas_res[ctwas_res$type!="SNP",]
+    
+  #collapse gene+tissues to genes and compute combined PIP
+  ctwas_gene_res$gene <- sapply(ctwas_gene_res$id, function(x){unlist(strsplit(x,"[|]"))[1]})
+    
+  df_Liver <- ctwas_gene_res[ctwas_gene_res$type=="Liver",]
+  df_mix1 <- ctwas_gene_res[ctwas_gene_res$type=="weight_05_1",]
+  df_mix2 <- ctwas_gene_res[ctwas_gene_res$type=="weight_05_2",]
+  df_mix3 <- ctwas_gene_res[ctwas_gene_res$type=="weight_05_3",]
+  
+  df_gene <- aggregate(ctwas_gene_res$susie_pip, by=list(ctwas_gene_res$gene), FUN=sum)
+  colnames(df_gene) <- c("gene", "combined_pip")
+  df_gene$Liver_pip <-0
+  df_gene$mix1_pip <-0
+  df_gene$mix2_pip <-0
+  df_gene$mix3_pip <-0
+    
+  for(i in df_gene$gene){
+    if(i %in% df_Liver$gene){
+      df_gene[df_gene$gene==i,"Liver_pip"] <- round(df_Liver[df_Liver$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix1$gene){
+      df_gene[df_gene$gene==i,"mix1_pip"] <- round(df_mix1[df_mix1$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix2$gene){
+      df_gene[df_gene$gene==i,"mix2_pip"] <- round(df_mix2[df_mix2$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  for(i in df_gene$gene){
+    if(i %in% df_mix3$gene){
+      df_gene[df_gene$gene==i,"mix3_pip"] <- round(df_mix3[df_mix3$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  df_gene$combined_pip <- round(df_gene$combined_pip,3)
+  #sort by combined PIP
+  df_gene <- df_gene[order(-df_gene$combined_pip),]
+  #genes with PIP>0.8 or 20 highest PIPs
+  df_gene <- df_gene[df_gene$combined_pip>0.8,]
+    
+  Liver_attr <- c(Liver_attr,df_gene$Liver_pip/df_gene$combined_pip)
+  mix1_attr <- c(mix1_attr,df_gene$mix1_pip/df_gene$combined_pip)
+  mix2_attr <- c(mix2_attr,df_gene$mix2_pip/df_gene$combined_pip)
+  mix3_attr <- c(mix3_attr,df_gene$mix3_pip/df_gene$combined_pip)
+}
+
+pip_df <- list(Liver_attr,mix1_attr,mix2_attr,mix3_attr)
+```
+
+```{r echo=FALSE}
+data <- data.frame(
+  tissue=c(rep("Liver",length(pip_df[[1]])), rep("mix1",length(pip_df[[2]])), rep("mix2",length(pip_df[[3]])), rep("mix3",length(pip_df[[4]]))),
+  attribution=c(pip_df[[1]],pip_df[[2]],pip_df[[3]],pip_df[[4]])
+)
+
+data$tissue <- factor(data$tissue, levels=unique(data$tissue))
+
+#pdf(file = "./primary_set2.pdf", width = 5, height = 5)
+ggbarplot(data, 
+          x = "tissue", 
+          y = "attribution", 
+          add = "mean_se", 
+          fill = "tissue", 
+          legend = "none", 
+          ylab="Proportion", 
+          xlab="",
+          palette = c("#7fc97f", "#beaed4", "#fdc086", "#92c5de")) + grids(linetype = "dashed") + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
+#dev.off()
 ```
 
 ### Separate effect size parameters
@@ -938,7 +1506,7 @@ sample_size <- 45000
 PIP_threshold <- 0.8
 ```
 
-```{r}
+```{r echo=FALSE}
 results_df <- data.frame(simutag=as.character(),
                               n_causal=as.integer(),
                               n_causal_combined=as.integer(),
@@ -1021,14 +1589,7 @@ for (i in 1:length(simutags)){
   estimated_group_pve_all <- estimated_group_prior_var_all*estimated_group_prior_all*group_size/sample_size #check PVE calculation
   
   #multitissue TWAS analysis with bonferroni adjusted threshold for z scores
-  #load(paste0(results_dir, runtag, "_simu", simutag, "_LDR_z_gene.Rd"))
-  ld_exprfs <- paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR_chr", 1:22, ".exprqc.Rd")
-  z_gene <- list()
-  for (j in 1:length(ld_exprfs)){
-    load(ld_exprfs[j])
-    z_gene[[j]] <- z_gene_chr
-  }
-  z_gene <- do.call(rbind, z_gene)
+  load(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag,"_LDR_z_gene.Rd"))
   alpha <- 0.05
   sig_thresh <- qnorm(1-(alpha/nrow(z_gene)/2), lower=T)
   twas_genes <- z_gene$id[abs(z_gene$z)>sig_thresh]
@@ -1069,7 +1630,9 @@ for (i in 1:length(simutags)){
   
   results_df <- rbind(results_df, results_current)
 }
+```
 
+```{r}
 #results using PIP threshold (gene+tissue)
 results_df[,c("simutag", "n_causal", "n_detected_pip", "n_detected_pip_in_causal")]
 
@@ -1103,3 +1666,122 @@ results_df[,c(which(colnames(results_df)=="simutag"), grep("twas", names(results
 sum(results_df$n_detected_comb_twas_in_causal)/sum(results_df$n_detected_comb_twas)
 ```
 
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1
+y2 <- results_df$prior_weight2
+y3 <- results_df$prior_weight3
+y4 <- results_df$prior_weight4
+
+truth <- rbind(c(1,0.015),c(2,0.003),c(3,0.003),c(4,0.003))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","05-1","05-2","05-3"),ylim=c(0,0.025),ylab="Prior inclusion")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$prior_weight1/results_df$prior_snp
+y2 <- results_df$prior_weight2/results_df$prior_snp
+y3 <- results_df$prior_weight3/results_df$prior_snp
+y4 <- results_df$prior_weight4/results_df$prior_snp
+
+truth <- rbind(c(1,60),c(2,12),c(3,12),c(4,12))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","05-1","05-2","05-3"),ylim=c(0,100),ylab="Enrichment")
+```
+
+```{r echo=FALSE}
+y1 <- results_df$pve_weight1
+y2 <- results_df$pve_weight2
+y3 <- results_df$pve_weight3
+y4 <- results_df$pve_weight4
+
+truth <- rbind(c(1,0.05),c(2,0.01),c(3,0.01),c(4,0.01))
+est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4))
+plot_par_4(truth,est,xlabels = c("Liver","05-1","05-2","05-3"),ylim=c(0,0.1),ylab="PVE")
+```
+
+```{r echo=FALSE}
+Liver_attr <- c()
+mix1_attr <- c()
+mix2_attr <- c()
+mix3_attr <- c()
+for (i in 1:length(simutags)){
+  simutag <- simutags[i]
+    
+  #load cTWAS results
+  ctwas_res <- data.table::fread(paste0(results_dir, runtag, "_simu", simutag, "_config", configtag, "_LDR.susieIrss.txt"))
+  ctwas_gene_res <- ctwas_res[ctwas_res$type!="SNP",]
+    
+  #collapse gene+tissues to genes and compute combined PIP
+  ctwas_gene_res$gene <- sapply(ctwas_gene_res$id, function(x){unlist(strsplit(x,"[|]"))[1]})
+    
+  df_Liver <- ctwas_gene_res[ctwas_gene_res$type=="Liver",]
+  df_mix1 <- ctwas_gene_res[ctwas_gene_res$type=="weight_05_1",]
+  df_mix2 <- ctwas_gene_res[ctwas_gene_res$type=="weight_05_2",]
+  df_mix3 <- ctwas_gene_res[ctwas_gene_res$type=="weight_05_3",]
+  
+  df_gene <- aggregate(ctwas_gene_res$susie_pip, by=list(ctwas_gene_res$gene), FUN=sum)
+  colnames(df_gene) <- c("gene", "combined_pip")
+  df_gene$Liver_pip <-0
+  df_gene$mix1_pip <-0
+  df_gene$mix2_pip <-0
+  df_gene$mix3_pip <-0
+    
+  for(i in df_gene$gene){
+    if(i %in% df_Liver$gene){
+      df_gene[df_gene$gene==i,"Liver_pip"] <- round(df_Liver[df_Liver$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix1$gene){
+      df_gene[df_gene$gene==i,"mix1_pip"] <- round(df_mix1[df_mix1$gene==i,"susie_pip"],3)
+    }
+  }
+    
+  for(i in df_gene$gene){
+    if(i %in% df_mix2$gene){
+      df_gene[df_gene$gene==i,"mix2_pip"] <- round(df_mix2[df_mix2$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  for(i in df_gene$gene){
+    if(i %in% df_mix3$gene){
+      df_gene[df_gene$gene==i,"mix3_pip"] <- round(df_mix3[df_mix3$gene==i,"susie_pip"],3)
+    }
+  }
+  
+  df_gene$combined_pip <- round(df_gene$combined_pip,3)
+  #sort by combined PIP
+  df_gene <- df_gene[order(-df_gene$combined_pip),]
+  #genes with PIP>0.8 or 20 highest PIPs
+  df_gene <- df_gene[df_gene$combined_pip>0.8,]
+    
+  Liver_attr <- c(Liver_attr,df_gene$Liver_pip/df_gene$combined_pip)
+  mix1_attr <- c(mix1_attr,df_gene$mix1_pip/df_gene$combined_pip)
+  mix2_attr <- c(mix2_attr,df_gene$mix2_pip/df_gene$combined_pip)
+  mix3_attr <- c(mix3_attr,df_gene$mix3_pip/df_gene$combined_pip)
+}
+
+pip_df <- list(Liver_attr,mix1_attr,mix2_attr,mix3_attr)
+```
+
+```{r echo=FALSE}
+data <- data.frame(
+  tissue=c(rep("Liver",length(pip_df[[1]])), rep("mix1",length(pip_df[[2]])), rep("mix2",length(pip_df[[3]])), rep("mix3",length(pip_df[[4]]))),
+  attribution=c(pip_df[[1]],pip_df[[2]],pip_df[[3]],pip_df[[4]])
+)
+
+data$tissue <- factor(data$tissue, levels=unique(data$tissue))
+
+#pdf(file = "./primary_set2.pdf", width = 5, height = 5)
+ggbarplot(data, 
+          x = "tissue", 
+          y = "attribution", 
+          add = "mean_se", 
+          fill = "tissue", 
+          legend = "none", 
+          ylab="Proportion", 
+          xlab="",
+          palette = c("#7fc97f", "#beaed4", "#fdc086", "#92c5de")) + grids(linetype = "dashed") + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
+#dev.off()
+```
